2007-10-09  Allan Sandfeld Jensen <kde@carewolf.com>

        Optimize the case of double descendant selectors "a b c",
        to avoid O(n^2) run-time where n is the depth of the DOM tree.

        * css/cssstyleselector.h: Define new early termination value for checkSelector
        * css/cssstyleselector.cpp: Bail-out when the selector-chain can't possibly match

2007-01-21  Allan Sandfeld Jensen <kde@carewolf.com>

        Handle dynamic updates of default non-inherited properties that are inherited explicitly

        * rendering/render_style.h: Add inheritedNoninherited flag
        * xml/dom_nodeimpl.{h,cpp}: virtual function affectedByNoInherit
        * xml/dom_textimpl.h: affectedByNoInherit is always true for text-nodes
        * xml/dom_elementimpl.cpp: NoInherit changes descends into children like Inherit changes,
        when affectedByNoInherit is true for the child node.
        * css/cssstyleselector.cpp: Set inheritedNoninherit whenever inherit is handled in a NonInherited property.

2006-11-14  Allan Sandfeld Jensen <kde@carewolf.com>

        Implement overflow-x and overflow-y

        * css/*.*: New properties
        * rendering/render_style.{h,cpp}: New properties
        * rendering/render_object.h: New functions scrollsOverflowX() and scrollsOverflowY
        * rendering/render_layer.h: Remove depricated function moveScrollbarsAside()
        * rendering/render_layer.cpp: More fine grained creation of scrollbars
        * khtmlview.cpp: More fine grained creation of scrollbars
        * rendering/render_block.cpp: Use new functions
        * rendering/render_box.cpp: Use new functions
        * rendering/bidi.cpp: Use new functions

2006-11-13  Allan Sandfeld Jensen <kde@carewolf.com>

        Merge text-overflow:ellipis from WebCore

        * css/*.*: New property and values
        * rendering/render_style.{h,cpp}: New property and values
        * rendering/render_line.{h,cpp}: New line-box for ellipsis